--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,20 @@ h1 {
   font-family: "Montserrat", sans-serif;
   font-size: 3rem;
   line-height: 1.5;
+  color: white;
 }
 .container-fluid {
   padding: 3% 15%;
+}
+.heading {
+  font-family: "Andika New Basic", sans-serif;
+  font-size: 2.5rem;
+}
+.navbar {
+  font-size: larger;
+  margin-bottom: 50px;
+}
+
+.rotated {
+  transform: rotate(30deg);
 }
